--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["Freepik", "hostoppgave", "macrovector"]
+	"cSpell.words": ["Freepik", "hostoppgave", "macrovector", "Plex"]
 }
