--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"gh-pages": "^4.0.0",
 		"react": "^18.2.0",
+		"react-axios": "^2.0.6",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
 		"react-router": "^6.4.2",
